kubernetes-networks/canary/web-deploy-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: canary
        image: voitenkov/k8s-intro-web:canary
        livenessProbe:
          tcpSocket: 
            port: 8000
        readinessProbe: # Добавим проверку готовности
          httpGet: # веб-сервера отдавать
            path: /index.html # контент
            port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
